@startuml

class Phone {
+ charging(): void
}

interface Voltage5V {
+ output5V(): void
}

class Voltage220V {
+ output220V(): void
}

class VoltageAdapter

Voltage5V <|.. VoltageAdapter
Voltage220V <|-- VoltageAdapter

Voltage5V <.. Phone

class Client

Phone <.. Client
VoltageAdapter <.. Client

@enduml
